--- a/src/sections/contact/contact.css
+++ b/src/sections/contact/contact.css
@@ -1,9 +1,10 @@
 Form {
   text-align: left;
+  
 }
 
 #contactSection {
-  margin-bottom: 3rem;
+  margin-top: 7rem !important;
 }
 
 .center {
