--- a/src/sections/projects/projects.css
+++ b/src/sections/projects/projects.css
@@ -1,11 +1,11 @@
-.btn-link .card{
+.card{
   position: relative;
+  padding-bottom: 30px;
 }
 
 .btn-link {
   position: absolute;
   right: 5%;
-  bottom: 5%;
   border-radius: 5px;
   border: 2px solid skyblue!important;
   text-decoration: none!important;
